# nanomsg-haskell

./: .gitignore  AUTHORS  CONTRIBUTORS  LICENSE  README.md  cabal.project  changelog  flake.nix  nanomsg-haskell.cabal
.github/workflows/: haskell-ci.yml
benchmarks/: Allocation.hs  SendMessages.hs  Zmq.hs  output.txt
src/: Nanomsg.hsc
src/Nanomsg/: Binary.hs
src/Network/: Nanomsg.hsc
tests/: BinaryDriver.hs  BinaryProperties.hs  Client.hs  Main.hs  Properties.hs  Server.hs
