name:                nanomsg-haskell
version:             0.2.1.1
synopsis:
  Bindings to the nanomsg library
description:
  This is a Haskell binding for the nanomsg library: <http://nanomsg.org/>.

  There's support for blocking send and recv, a non-blocking receive,
  and for all the socket types and the functions you need to wire
  them up and tear them down again.

  Most sockets options are available through accessor and mutator
  functions. Sockets are typed, transports are not.

homepage:            https://github.com/ivarnymoen/nanomsg-haskell
license:             MIT
license-file:        LICENSE
author:              Ivar Nymoen
maintainer:          <ivar.nymoen@gmail.com>
copyright:           Copyright (c) 2013 Ivar Nymoen
category:            Network
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
    README.md
    , tests/*.hs
    , benchmarks/*.hs

library
  hs-source-dirs:    src
  ghc-options:       -O2 -Wall
  default-language:  Haskell2010
  exposed-modules:   Nanomsg
  default-extensions:  ForeignFunctionInterface, DeriveDataTypeable
  includes:          nanomsg/nn.h
  extra-libraries:   nanomsg
  build-depends:
    base >= 4.5 && < 4.8,
    bytestring >= 0.9.0 && < 0.11

test-suite tests
  type:              exitcode-stdio-1.0
  hs-source-dirs:    tests
  main-is:           Properties.hs
  ghc-options:       -O2 -Wall -threaded
  default-language:  Haskell2010
  build-depends:
    base >= 4.5 && < 4.8,
    bytestring >= 0.9.0 && < 0.11,
    nanomsg-haskell,
    QuickCheck,
    test-framework,
    test-framework-quickcheck2,
    test-framework-th

source-repository head
  type:              git
  location:          https://github.com/ivarnymoen/nanomsg-haskell

benchmark send-messages
  type:              exitcode-stdio-1.0
  main-is:           SendMessages.hs
  ghc-options:       -O2 -Wall -threaded
  default-language:  Haskell2010
  hs-source-dirs:    benchmarks
  build-depends:
    base >= 4.5 && < 4.8,
    bytestring >= 0.9.0 && < 0.11,
    nanomsg-haskell,
    criterion

benchmark vs-zeromq-bindings
  type:              exitcode-stdio-1.0
  main-is:           Zmq.hs
  ghc-options:       -O2 -Wall -threaded
  default-language:  Haskell2010
  hs-source-dirs:    benchmarks
  build-depends:
    base >= 4.5 && < 4.8,
    bytestring >= 0.9.0 && < 0.11,
    nanomsg-haskell,
    zeromq3-haskell,
    criterion

